--- a/index.html
+++ b/index.html
@@ -4,21 +4,116 @@
 <!--<base href="" /><!-- -->
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <title>jQuery Automplite Plugin</title>
+<link rel="stylesheet" href="./demo/prettify.css">
+<link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800|Roboto+Slab:400,300,700,100' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic|Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<input style="padding:4px 6px; height:25px;line-height:25px;" id="auto1" type="text"><button id="open" class="icon-arrow-down">open</button>
-<br>
-<input style="border:3px solid #ccc;" id="auto2" type="text">
-<br>
-Cars:<input style="padding:10px; width:300px; font-size:1.3em;" id="auto3" type="text">
-<br>
-Street:<input id="auto4" type="text" placeholder="Yo">
+<div class="container-fluid">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  <div class="container">
+		<div class="auto">
+			<ul class="nav navbar-nav">
+				<li><a href="/">XDsoft.net</a></li>
+				<li class="active"><a href="http://xdsoft.net/jqplugins/autocomplete/">Autocomplete</a></li>
+				<li><a href="http://xdsoft.net/jqplugins/datetimepicker/">DateTimePicker</a></li>
+				<li><a href="http://xdsoft.net/jqplugins/range2dslider/">Range2DSlider</a></li>
+			</ul>
+			<form class="navbar-form navbar-right">
+				<a class="btn btn-info" href="https://github.com/xdan/autocomplete/">Source</a>
+				<a class="btn btn-success" href="https://github.com/xdan/autocomplete/archive/master.zip">Download</a>
+			</form>
+		</div>
+	  </div>
+	</nav>
+	<div class="auto" style="margin-top:100px">
+		<h1 class="text-center">Autocomplete like Google <small>jQuery Plugin</small></h1>
+		<p class="desc">JQuery Autocomplete plugin is a lightweight simple and easy in settings autocomplete like Google</p>
+		<p class="text-center">
+			<a id="local" class="btn btn-link" href="#local">Local</a>
+			<a class="btn btn-link" href="#remote">Remote</a>
+		</p>
+		<div class="form-group" style="margin:20px 0px;">
+			<input type="text" class="form-control" id="auto1" placeholder="enter state">
+		</div>
+		<h2>How to use autocomplete?</h2>
+		<h3>Insert code</h2>
+		<p>add this code after &lt;/body&gt; in your document.</p>
+		<pre class="prettyprint linenums">&lt;link type="text/css" rel="stylesheet" href="autocomplete.css" /&gt;                  
+&lt;script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"&gt;&lt;/script&gt;
+&lt;script src="autocomplete.js"&gt;&lt;/script&gt;</pre>
+				<h3>Add data for autocomplete</h2>
+<pre class="prettyprint linenums">&lt;script type="text/javascript"&gt;
+var states = [
+	'Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
+	'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
+	'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
+	'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
+	'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
+	'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
+	'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
+	'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
+	'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
+];
+&lt;/script&gt;</pre>
+		<h3>Init autocomplete plugin</h2>
+		<pre class="prettyprint linenums">&lt;script type="text/javascript"&gt;
+$(function() {
+	$("input").autocomplete({
+		sources:[states]
+	}); 
+});
+&lt;/script&gt;</pre>
+
+
+		<h2 id="remote">Autocomplete from remote data</h2>
+		<div class="input-group" style="margin:20px 0px;">
+			<input type="text" class="form-control" id="remote_input" placeholder="Enter movie">
+			<span class="input-group-btn">
+				<button id="open" class="btn btn-default" type="button"><span class="caret"></span></button>
+			</span>
+		</div>
+		<h3>Ajax</h2>
+		<p>use ajax for getting data from server</p>
+		<pre class="prettyprint linenums">&lt;script&gt;
+$('#remote_input').autocomplete({
+	valueKey:'title',
+	sources:[{
+		url:"/test.php?query=%QUERY%",
+		type:'remote',
+		getValueFromItem:function(item){
+			return item.title
+		},
+		ajax:{
+			dataType : 'jsonp'
+		}
+	}]
+});
+$('button#open').click(function(){
+	$('#remote_input').trigger('open');
+	$('#remote_input').focus();
+});
+&lt;/script&gt;</pre>
+	</div>
+</div>
 </body>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="./demo/demo.css">
+<script src="./demo/jquery.js" type="text/javascript"></script>
+<script src="./demo/prettify.js" type="text/javascript"></script>
+<script type="text/javascript">
+window.prettyPrint && prettyPrint()
+</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="http://api-maps.yandex.ru/2.0-stable/?load=package.full&lang=ru-RU" type="text/javascript"></script>
-<script src="jquery.js" type="text/javascript"></script>
+
 <link rel="stylesheet" href="jquery.autocomplete.css">
 <script src="jquery.autocomplete.js" type="text/javascript"></script>
 <script>
+
+/********************************** local start ************************************************/
 var states = [
 	'Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
 	'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
@@ -34,11 +129,28 @@ var states = [
 $('#auto1').autocomplete({
 	sources:[states]
 });
+/*********************************** local end *****************************************************/
+
+
+/*********************************** remote start *****************************************************/
+$('#remote_input').autocomplete({
+valueKey:'title',
+sources:[{
+	url:"http://xdsoft.net/jquery-plugins/?task=demodata&s=%QUERY%",
+	type:'remote',
+	getValueFromItem:function(item){
+		return item.title
+	},
+	ajax:{
+		dataType : 'jsonp'	
+	}
+}]});
 
 $('#open').click(function(){
-	$('#auto1').trigger('open');
-	$('#auto1').focus();
+	$('#remote_input').trigger('open');
+	$('#remote_input').focus();
 });
+/*********************************** remote end *****************************************************/
 
 $('#auto2').autocomplete({
 	sources:[{
@@ -58,15 +170,7 @@ $('#auto2').autocomplete({
 		}
 	}]
 });
-$('#auto3').autocomplete({
-valueKey:'title',
-sources:[{
-	url:"/test.php?query=%QUERY%",
-	type:'remote',
-	getValueFromItem:function(item){
-		return item.title
-	}
-}]});
+
 
 $('#auto4').autocomplete({
 	sources:function(req,add){
@@ -90,6 +194,5 @@ $('#auto4').autocomplete({
 	
 	dropdownWidth:'auto'
 });
-
 </script>
 </html>
