Support Accents. Fix resize plugin with resize window

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</nav>
 	<div class="auto" style="margin-top:100px">
 		<h1 class="text-center">Autocomplete like Google <small>jQuery Plugin</small></h1>
-		<p class="desc">JQuery Autocomplete plugin is a lightweight simple and easy in settings autocomplete like Google</p>
+		<p class="desc">JQuery Autocomplete plugin is a lightweight simple and easy in settings autocomplete like Google. Accents support</p>
 		<p class="text-center">
 			<a id="local" class="btn btn-link" href="#local">Local</a>
 			<a class="btn btn-link" href="#remote">Remote</a>
